# charon-rudra

./: .gitignore  .gitmodules  Cargo.toml  README.md  test.sh
.github/: index.html
.github/workflows/: doc.yaml  test-crates.yaml  test.yaml
additional-tests/: okay_phantom_with_apis.rs
additional-tests/utility/: generic_param_ctxts.rs  report_handle_macro.rs
diagnostics/: copy_filter.out  ffi.out  fp1.out  gen.rs  generic_param_ctxts.out  insertion_sort.out  normal2.out  okay_channel.out  okay_imm.out  okay_phantom.out  okay_phantom_with_apis.out  okay_ptr_like.out  okay_transitive.out  okay_where.out  order_unsafe.out  order_unsafe_loop.out  order_unsafe_transmute.out  report_handle_macro.out  sync-with-same-tpye-param-on-adt-type.out  sync_over_send_fp.out  tests.txt  vec_push_all.out  wild_channel.out  wild_phantom.out  wild_send.out  wild_sync.out
src/: main.rs
src/rudra/: analysis.rs  context.rs  graph.rs  iter.rs  lib.rs  log.rs  macros.rs  paths.rs  report.rs  utils.rs
src/rudra/analysis/: unsafe_dataflow.rs  unsafe_destructor.rs
src/rudra/analysis/send_sync_variance/: analyze.rs  analyze_send.rs  mod.rs  utils.rs
src/rudra/analysis/send_sync_variance/utils/: adt_generic_params.rs  generics_mapping.rs
test-pkg/: Cargo.toml
tests/additional-tests/: sync-with-same-tpye-param-on-adt-type.rs
tests/utility/: identify_generic_params.rs  rudra_paths_discovery.rs
