[package]
name = "charon-rudra"
version = "0.1.0"
edition = "2021"
autotests = false # don't recognize tests dir

[[bin]]
name = "cargo-charon-rudra"
path = "src/main.rs"

[[test]]
name = "diagnostics"
path = "diagnostics/gen.rs"
test = true
harness = true

[dependencies]
anyhow = "1.0.89"
bitflags = "2.6.0"
# Commit SHA: 48d01c59aa686f1eb51f493ef9f
# charon = { git = "https://github.com/AeneasVerif/charon", branch = "main", default-features = false }
charon = { path = "charon/charon", default-features = false }
chrono = "0.4.38"
clap = { version = "4.5", features = ["derive", "env"] }
fern = "0.6.2"
if_chain = "1.0.2"
log = "0.4.22"
maplit = { version = "1.0.2" }
once_cell = { version = "1.20.1" }
parking_lot = "0.12.3"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.128", features = ["unbounded_depth"] }
serde_stacker = "0.1.11"
snafu= "0.8.5"
take_mut = "0.2.2"
termcolor = "1.4.1"
toml = "0.8.19"
tracing-subscriber = { version = "0.3", features = [ "env-filter", "std", "fmt" ] }
tracing-tree = { git = "https://github.com/Nadrieril/tracing-tree", features = [ "time" ] } # Fork with improved formating and timing info.
tracing = { version = "0.1", features = [ "max_level_trace" ] }
prefer-dynamic = "0" # for dynamic linking

[dev-dependencies]
# prefer-dynamic = { version = "0.1.2", features = ["link-test"] } # for dynamic linking
expect-test = "1.5"
walkdir = "2.5.0"
duct = "0.13.7"

[features]
backtraces = []

[workspace]
members = ["./charon/charon/", "./charon/charon/macros/"]
